--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -30,9 +30,32 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <div class="text"></div>
+      <textarea class="text" rows="8"></textarea>
+      <div class="row">
+        <div class="hour">9:00am</div>
+        <div class="hour">10:00am</div>
+        <div class="hour">11:00am</div>
+        <div class="hour">12:00pm</div>
+        <div class="hour">1:00pm</div>
+        <div class="hour">2:00pm</div>
+        <div class="hour">3:00pm</div>
+        <div class="hour">4:00pm</div>
+        <div class="hour">5:00pm</div>
+      </div>
+      <div class="meeting-time"></div>
+      <label for="meeting-time">What time is your meeting?
+      </label>
+      <input type="time" class="meeting-time" min="9:00am" max="5:00pm" required>
+      <div class="saveBtn">
+        <button type="button" class="saveBtn">Save</button>
+      </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
+
+<!-- needs class: hour, past, present, future, saveBtn, description,time-block, row, saveBtn i:hover -->
