adding a file saver

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
       <textarea class="col-md-10">
         </textarea>
-      <button type="button" class= "btn saveBtn col-md-1"><i class="fas fa-save"></i>
+      <button type="button" class= "btn saveBtn col-md-1" onclick="save();"><i class="fas fa-save"></i>
         </button>
     
       <div class="row time-block">
@@ -49,7 +49,7 @@
         </div>
       <textarea class="col-md-10">
         </textarea>
-      <button type="button" class= "btn saveBtn col-md-1"><i class="fas fa-save"></i>
+      <button type="button" class= "btn saveBtn col-md-1" onclick="save();"><i class="fas fa-save"></i>
         </button>
 
       <div class="row time-block">
@@ -58,7 +58,7 @@
         </div>
       <textarea class="col-md-10">
         </textarea>
-      <button type="button" class= "btn saveBtn col-md-1"><i class="fas fa-save"></i>
+      <button type="button" class= "btn saveBtn col-md-1" onclick="save();"><i class="fas fa-save"></i>
         </button>
 
       <div class="row time-block">
@@ -67,7 +67,7 @@
         </div>
       <textarea class="col-md-10">
         </textarea>
-      <button type="button" class= "btn saveBtn col-md-1"><i class="fas fa-save"></i>
+      <button type="button" class= "btn saveBtn col-md-1 onclick="save();""><i class="fas fa-save"></i>
         </button>
 
       <div class="row time-block">
@@ -76,7 +76,7 @@
         </div>
       <textarea class="col-md-10">
         </textarea>
-      <button type="button" class= "btn saveBtn col-md-1"><i class="fas fa-save"></i>
+      <button type="button" class= "btn saveBtn col-md-1" onclick="save();"><i class="fas fa-save"></i>
         </button>
 
       <div class="row time-block">
@@ -85,7 +85,7 @@
         </div>
       <textarea class="col-md-10">
         </textarea>
-      <button type="button" class= "btn saveBtn col-md-1"><i class="fas fa-save"></i>
+      <button type="button" class= "btn saveBtn col-md-1 onclick="save();""><i class="fas fa-save"></i>
         </button>
 
       <div class="row time-block">
@@ -94,7 +94,7 @@
         </div>
       <textarea class="col-md-10">
         </textarea>
-      <button type="button" class= "btn saveBtn col-md-1"><i class="fas fa-save"></i>
+      <button type="button" class= "btn saveBtn col-md-1" onclick="save();"><i class="fas fa-save"></i>
         </button>
 
       <div class="row time-block">
@@ -103,7 +103,7 @@
         </div>
       <textarea class="col-md-10">
         </textarea>
-      <button type="button" class= "btn saveBtn col-md-1"><i class="fas fa-save"></i>
+      <button type="button" class= "btn saveBtn col-md-1" onclick="save();"><i class="fas fa-save"></i>
         </button>
 
       <div class="row time-block">
@@ -112,12 +112,13 @@
         </div>
       <textarea class="col-md-10">
         </textarea>
-      <button type="button" class= "btn saveBtn col-md-1"><i class="fas fa-save"></i>
+      <button type="button" class= "btn saveBtn col-md-1" onclick="save();"><i class="fas fa-save"></i>
         </button>
       
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./assets/js/script.js"></script>
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
